fix: remove scrollbar everywhere

--- a/src/widgets/ChatList/Chatlist.module.scss
+++ b/src/widgets/ChatList/Chatlist.module.scss
@@ -7,6 +7,7 @@
   width: 100%;
   height: 100%;
   overflow-y: scroll;
+  scrollbar-width: none;
 }
 
 .chat::-webkit-scrollbar {
